# stockplatform

./: .env.example  .firebaserc  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  COMPANIES_TABLE_FIX.md  DART_INTEGRATION.md  DATA_GO_KR_API.md  EXECUTE_THIS.sql  FINAL_VALIDATION_REPORT.md  FIX_KSIC_IMPORT_ERROR.md  FORMULAS.md  INDUSTRY_CLASSIFIER.md  KSIC_FIX_GUIDE.md  KSIC_FIX_README.md  KSIC_INTEGRATION.md  KSIC_MIGRATION_GUIDE.md  LOCAL_TEST_REPORT.md  MAPPING_GUIDE.md  MIGRATION_GUIDE.md  Makefile  QUICK_FIX.sql  README.md  SCRIPTS_SETUP.md  SETUP.md  SUPABASE_MCP_SETUP.md  TODO.md  VALIDATION_DATA.md  convert_ksic.py  craco.config.js  firebase.json  fix_merge_conflicts.bat  instrumentation-client.js  ksic_mapping.csv  main.py  migration_007.sql  next.config.js  (+20 more)
.claude/: launch.json  settings.local.json
docs/: DART_AI_PIPELINE.md  DART_INTEGRATION.md  INDUSTRY_CLASSIFIER.md  KSIC_COLUMN_RENAME_GUIDE.md  MIGRATION_GUIDE.md  SETUP.md  architecture.md  deployment.md  env-registry.md  external-apis.md  infrastructure.md  sector_mapping_explained.md
frontend/: MIDDLEWARE.md  MONITORING_GUIDE.md  VERCEL_SETUP.md  instrumentation.ts  middleware.ts  newrelic.js  next.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  vercel.json
my-research-platform/: MONITORING_GUIDE.md  SETUP_GUIDE.md  VERCEL_SETUP.md  eslint.config.mjs  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts  tsconfig.json  vercel.json
pages/: sentry-example-page.jsx
scripts/: FIX_FETCH_KRX_ERROR.md  README.md  __init__.py  apply_dart_migration.py  apply_ksic_migration.py  apply_ksic_primary_key_fix.py  apply_migrations.py  auto_analyst - 복사본.py  auto_analyst.py  backfill_foreign_flow.py  backfill_mofe_indicator.py  backfill_price_history.py  backfill_prices.py  backfill_scores.py  backfill_sector_macro.py  backtest_dilution.py  check_db_schema.py  check_processing_lag.py  check_sectors.py  compute_alpha_score.py  compute_backtest.py  compute_base_score.py  compute_f_score.py  compute_loan_pressure.py  compute_market_radar.py  compute_sector_signals.py  compute_volume_zscore.py  (+58 more)
(+569 files in other folders)
