[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockplatform"
version = "0.1.0"
description = "K-Market Insight Stock Platform"
authors = [
    {name = "K-Market Insight Team"}
]
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "requests",
    "pandas",
    "openpyxl",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools]
packages = ["scripts", "scripts.industry_classifier"]
